--- a/Week4.qmd
+++ b/Week4.qmd
@@ -1,6 +1,6 @@
 # Week4 - Policy Case Study in New York City
-Policy selection:
-[OneNYC-2050-Summary.pdf (cityofnewyork.us)](https://onenyc.cityofnewyork.us/wp-content/uploads/2019/05/OneNYC-2050-Summary.pdf)
+
+Policy selection: [OneNYC-2050-Summary.pdf (cityofnewyork.us)](https://onenyc.cityofnewyork.us/wp-content/uploads/2019/05/OneNYC-2050-Summary.pdf)
 
 ## Summary
 
